--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,14 @@
 [package]
-name = "sortlib"
+name = "bt"
 version = "0.1.0"
 edition = "2021"
+authors = ["Bilal Dias"]
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[lib]
+path = "src/lib.rs"
+
+[[bin]]
+name = "example"
+path = "src/main.rs"
 
 [dependencies]
